# nablax-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  check_services.py  demo_test.py  main.py  mcp.config  pyproject.toml  requirements.txt  routes.py  schemas.py  test_all_cases.py
agents/: README.md  agent.py  client.md  email_utils.py  mcp_client.py  mcp_manager.py  schema.py
api/: email_router.py
mcp_server/: README.md
services/agent_service/: README.md  llm_client.py  llm_tool_selector.py  main.py  mcp.config  mcp_client  mcp_client.py  mcp_registry.py
services/fastapi_service/: main.py
tasks/: doc_task.md  mcp.md  structure.md  task.md
tests/: test_health_check.py  test_llm_client.py  test_mcp_client.py
